# block2bin

./: .gitmodules  CMakeLists.txt  blocks.json  example.sb3  example2.sb3
compiler/: CMakeLists.txt
compiler/include/b2b/: common.hpp  opcode.hpp  opt.hpp  option.hpp  project.hpp  project_fwd.hpp  tree.hpp  tree_fwd.hpp  zip.hpp
compiler/include/b2b/ir/: builder.hpp
compiler/src/: main.cpp  opcode.cpp  project.cpp  zip.cpp
compiler/src/ir/: builder.cpp
engine/: CMakeLists.txt
