cmake_minimum_required(VERSION 3.31)
project(block2bin)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(ENABLE_COMMONCRYPTO "" OFF)
option(ENABLE_GNUTLS "" OFF)
option(ENABLE_MBEDTLS "" OFF)
option(ENABLE_OPENSSL "" OFF)
option(ENABLE_WINDOWS_CRYPTO "" OFF)
option(ENABLE_BZIP2 "" OFF)
option(ENABLE_LZMA "" OFF)
option(ENABLE_ZSTD "" OFF)
option(ENABLE_FDOPEN "" OFF)
option(BUILD_TOOLS "" OFF)
option(BUILD_REGRESS "" OFF)
option(BUILD_OSSFUZZ "" OFF)
option(BUILD_EXAMPLES "" OFF)
option(BUILD_DOC "" OFF)

option(BUILD_SHARED_LIBS "" OFF)

add_subdirectory(deps/json)
add_subdirectory(deps/libzip)
add_subdirectory(compiler)
add_subdirectory(engine)
